<resources>
    <string name="app_name">ListIt</string>
    <string name="CriaLista">Create List</string>
    <string name="Listas">Lists</string>
    <string name="VerProdutos">View Products</string>
    <string name="VerUnidades">View Units</string>
    <string name="Abreviatura">Abbreviation</string>
    <string name="Designacao">Designation</string>
    <string name="Nova">New</string>
    <string name="Unidade">Unit</string>
    <string name="Remove">Remove</string>
    <string name="Pesquisa">Search</string>
    <string name="Produto">Product</string>
    <string name="Categoria">Category</string>
    <string name="Marca">Brand</string>
    <string name="Pesquisados">Researched</string>
    <string name="Ordena">Order</string>
    <string name="Ordenados">Sorted</string>
    <string name="CriarLista">Create List</string>
    <string name="NovaLista">New List</string>
    <string name="ListaImportada">Imported List</string>
    <string name="Guardar">Save</string>
    <string name="Lista">List</string>
    <string name="NomeLista">List Name</string>
    <string name="Adiconar">Add</string>
    <string name="NovoProduto">New Product</string>
    <string name="ProdutoExistente">Existing Product</string>
    <string name="Quantidade">Amount</string>
    <string name="Notas">Notes</string>
    <string name="Escolhao">Choose the</string>
    <string name="Preco">Price</string>
    <string name="EditaProduto">Edit Product</string>
    <string name="Escolhaa">Choose the</string>
    <string name="Escolha">Choose</string>
    <string name="aLista">the List</string>
    <string name="FinalizarCompra">Checkout</string>
    <string name="Ordenada">orderly</string>
    <string name="Estado">Status</string>
    <string name="NomeListaVazio">Please Insert a valid name</string>
    <string name="ListaGuardada">List Saved</string>
    <string name="DesignacaoFalta">Please Insert a designation</string>
    <string name="AbreviaturaFalta">Please insert an abbreviation</string>
    <string name="QuantidadeFalta">Please insert the amount</string>
    <string name="UnidadeFalta">Please select an unit</string>
    <string name="FaltaCampos">Insert one of the fields</string>
    <string name="CamposAMais">Insert only of the fields</string>
    <string name="NaoProdutoDesignacao">"There arent any productds with that designation"</string>
    <string name="NaoProdutoMarca">"There arent any productds with that brand" </string>
    <string name="NaoProdutoCategoria">"There arent any productds with that category"</string>
    <string name="Alterar">Change</string>
    <string name="FinalCompra">Successful purchase</string>
    <string name="ErroFinalizarCompra">There are products that are not purchased yet</string>


</resources>