<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="48dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="16dp"
                android:background="@drawable/transparent_bg_bordered_button"
                android:text="@string/CriaLista"
                android:textColor="#000000"
                android:fontFamily="sans-serif"
                android:onClick="onBtnCriarLista"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="16dp"
                android:background="@drawable/transparent_bg_bordered_button"
                android:text="@string/Listas"
                android:textColor="#000000"
                android:fontFamily="sans-serif"
                android:onClick="onBtnListas"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="16dp"
                android:background="@drawable/transparent_bg_bordered_button"
                android:text="@string/VerProdutos"
                android:textColor="#000000"
                android:fontFamily="sans-serif"
                android:onClick="onBtnVerProdutos"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/transparent_bg_bordered_button"
                android:text="@string/VerUnidades"
                android:textColor="#000000"
                android:fontFamily="sans-serif"
                android:onClick="onBtnVerUnidades"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>