<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".atividades.EditaProduto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/EditaProduto"
                android:textSize="48sp"
                android:fontFamily="sans-serif-black"
                android:textColor="#8A2BE2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Designacao"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#8A2BE2"
                    android:fontFamily="sans-serif-black"/>
                <EditText
                    android:id="@+id/editDesignacaoProd"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/transparent_bg_bordered_button" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Marca"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#8A2BE2"
                    android:fontFamily="sans-serif-black"/>
                <EditText
                    android:id="@+id/editMarca"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/transparent_bg_bordered_button" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Categoria"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#8A2BE2"
                    android:fontFamily="sans-serif-black"/>
                <EditText
                    android:id="@+id/editCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/transparent_bg_bordered_button" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Quantidade"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="#8A2BE2"
                        android:fontFamily="sans-serif-black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/editQuantidade"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/transparent_bg_bordered_button"
                        android:inputType="number"/>
                    <Spinner
                        android:id="@+id/spinnerUnidades"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="64dp"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Preco"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#8A2BE2"
                    android:fontFamily="sans-serif-black"/>
                <EditText
                    android:id="@+id/editPreco"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/transparent_bg_bordered_button"
                    android:inputType="numberDecimal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.25"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Notas"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#8A2BE2"
                    android:fontFamily="sans-serif-black"/>
                <EditText
                    android:id="@+id/editNotas"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/transparent_bg_bordered_button" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_btn_save"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:scaleX="3"
                android:scaleY="3"
                android:onClick="onClickBtnSave"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>