<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".atividades.PesquisaProdutos"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:text="@string/Pesquisa"
                android:textSize="48sp"
                android:fontFamily="sans-serif-black"
                android:textColor="#8A2BE2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Produto"
                android:gravity="center_horizontal|top"
                android:textSize="48sp"
                android:fontFamily="sans-serif-black"
                android:textColor="#8A2BE2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/DesignacaoUnidades"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#8A2BE2"
                    android:fontFamily="sans-serif-black"/>
                <EditText
                    android:id="@+id/editDesignacaoAPesquisar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/transparent_bg_bordered_button"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Marca"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#8A2BE2"
                    android:fontFamily="sans-serif-black"/>
                <EditText
                    android:id="@+id/editMarcaAPesquisar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/transparent_bg_bordered_button"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Categoria"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#8A2BE2"
                    android:fontFamily="sans-serif-black"/>
                <EditText
                    android:id="@+id/editCategoriaAPesquisar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/transparent_bg_bordered_button"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_btn_search"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:scaleX="3.5"
                android:scaleY="3.5"
                android:onClick="OnClickBtnSearch"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>